<resources>
    <string name="app_name">MasseCorporelle</string>
    <string name="main_title">IMC calculator</string>
    <string name="main_taille">Enter height</string>
    <string name="main_poids">Enter weight</string>
    <string name="main_hint_taille">Height</string>
    <string name="main_hint_poids">Weight</string>
    <string name="main_cancel_bt">Cancel</string>
    <string name="main_calcul_bt">Calcul</string>
    <string name="result_annonce">Votre masse corporelle est de :</string>
    <string name="result_IMC">40</string>
    <string name="result_remarque">Vraiment pas terrible. Pense à faire du sport</string>
    <string name="menu_favori">Favori</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_about">About</string>
    <string name="about_createur">Créateur : Ethan Ummel</string>
    <string name="about_dateCreation">Date de création : 13 janvier 2023</string>
</resources>