<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
            />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/app_margin"
            android:gravity="center"
            android:text="@string/main_title" />

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="@dimen/main_img_size"
            android:layout_height="@dimen/main_img_size"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/weightlogo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_label_size"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/main_taille" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_taille_layout"
            style="@style/Widget.IMC.TextInputLayer.Taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/main_hint_taille"
            app:suffixText="cm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_taille_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_label_size"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/main_poids" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_poids_layout"
            style="@style/Widget.IMC.TextInputLayer.Poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/main_hint_poids">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_poids_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_bt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/main_calcul_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/main_calcul_bt" />

        <Button
            android:id="@+id/main_cancel_bt"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/main_calcul_bt"
            android:text="@string/main_cancel_bt" />

    </RelativeLayout>
</LinearLayout>
