<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/app_margin"
            android:gravity="center"
            android:textSize="@dimen/main_text_size"
            android:text="@string/main_title" />

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="@dimen/main_img_size"
            android:layout_height="@dimen/main_img_size"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/weightlogo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_text_createur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_label_size"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="@dimen/main_text_size"
            android:text="@string/about_createur" />
        <TextView
            android:id="@+id/about_text_dateCreation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_label_size"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="@dimen/main_text_size"
            android:text="@string/about_dateCreation" />

    </LinearLayout>
</LinearLayout>
